@@ -40,17 +40,12 @@ PassRefPtr<SharedBuffer> SharedBuffer::createWithContentsOfFile(const String& fi
     if (file.InitCheck() != B_OK)
         return 0;
 
-    RefPtr<SharedBuffer> result = SharedBuffer::create();
-
     off_t size;
     file.GetSize(&size);
-    result->m_buffer.resize(size);
-    if (result->m_buffer.size() != size)
-        return 0;
-    result->m_size = size;
 
-    file.Read(result->m_buffer.data(), result->m_buffer.size());
-    return result.release();
+    Vector<char> buffer(size);
+    file.Read(buffer.data(), buffer.size());
+    return SharedBuffer::adoptVector(buffer);
 }
 
 } // namespace WebCore
