@@ -1,3 +1,13 @@
+2010-06-12  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Eric Seidel.
+
+        [Haiku] Cleanup SharedBuffer::createWithContentsOfFile
+        https://bugs.webkit.org/show_bug.cgi?id=39003
+
+        * platform/haiku/SharedBufferHaiku.cpp:
+        (WebCore::SharedBuffer::createWithContentsOfFile):
+
 2010-06-12  Anders Bakken  <agbakken@gmail.com>
 
         Reviewed by Eric Seidel.
